# imLib

./: CMakeLists.txt  README.md
src/: imlib.c  main.c  ttf.c
src/include/: imlib.h  ttf.h
